Tweaked some colours and the tooltip arrow size.  Changed the master tooltip z-index, as the previsou fix didn't work in all cases.  This results in not being able to use tooltips on pop-overs.  - Legacy-Id: 9451

--- a/bootstrap/less/variables.less
+++ b/bootstrap/less/variables.less
@@ -301,7 +301,7 @@
 @zindex-navbar:            1000;
 @zindex-dropdown:          1000;
 @zindex-popover:           1060;
-@zindex-tooltip:           1070;
+@zindex-tooltip:           1035; //1070;
 @zindex-navbar-fixed:      1030;
 @zindex-modal-background:  1040;
 @zindex-modal:             1050;
@@ -525,7 +525,7 @@
 //## Define colors for form feedback states and, by default, alerts.
 
 @state-success-text:             darken(@brand-success, 70%);
-@state-success-bg:               lighten(@brand-success, 40%);
+@state-success-bg:               lighten(desaturate(@brand-success, 20%), 40%);
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
 @state-info-text:                darken(@brand-info, 70%);
@@ -546,17 +546,17 @@
 //##
 
 //** Tooltip max width
-@tooltip-max-width:           200px;
+@tooltip-max-width:           250px;
 //** Tooltip text color
 @tooltip-color:               @state-info-text;
 //** Tooltip background color
-@tooltip-bg:                  @state-info-bg;
+@tooltip-bg:                  darken(saturate(@state-info-bg, 15%), 25%);
 @tooltip-opacity:             .9;
 
 //** Tooltip arrow width
-@tooltip-arrow-width:         5px;
+@tooltip-arrow-width:         8px;
 //** Tooltip arrow color
-@tooltip-arrow-color:         darken(@tooltip-bg, 60%);
+@tooltip-arrow-color:         @tooltip-bg;
 
 
 //== Popovers
